2009-23-02  Santiago Dueñas Domínguez  <sduenas@gsyc.es>

	* README:

	Fixed example.
	

2009-19-02  Santiago Dueñas Domínguez  <sduenas@gsyc.es>

	* Bicho/main.py:
	* Bicho/utils.py:

	Some config file bugs fixed.


2009-19-02  Santiago Dueñas Domínguez  <sduenas@gsyc.es>

	* Bicho/backends/Makefile.am:

	Added missed file to the makefile.


2009-05-02 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: KDE bugzilla support added

	Bicho retrieves data from KDE's bugzilla.


2009-27-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Minor bug fixed

	Bicho retrieves comments


2009-14-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Now it inserts GeneralInfo

	General Info is stored


2009-01-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Comments data is now stored

	Comments are stored in the database


2009-04-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Stores information in the database

	"Changes" information is now stored in mysql format


2009-03-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: It retrieves changes information

	Changes information is not stored yet. Just the HTML parser
	which creates a list of changes which will be stored in the future


2008-12-22 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* main.py: New option for parsing bugzillas added
	* backends/bg.py: bugzilla backend added

	Given support for bugzilla analysis. So far, basic information
	is stored in the database. No comments, no changes.


2008-12-19 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* configure.in:

	Release 0.21


2008-12-18 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/bicho.conf: Trunk file to default options

	Trunk config file to default options


2008-12-18 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* configure.in:

	Release 0.2

